--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -21,14 +21,25 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -r requirements.txt
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 . --config=build_blockers.flake8
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        flake8 . --config=warn_only.flake8 --exit-zero
     - name: Test with pytest
       run: |
         pytest
+    - name: Upload pytest-cov coverage HTML
+      uses: actions/upload-artifact@v1
+      with:
+        name: pytest-coverage-report-html
+        path: coverage_html
+      if: ${{ always() }}
+    - name: Upload pytest-cov coverage XML
+      uses: actions/upload-artifact@v1
+      with:
+        name: pytest-coverage-report-xml
+        path: coverage.xml
+      if: ${{ always() }}
