--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,23 +14,23 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.8
+    - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: 3.9
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Lint with flake8
+        pipenv install --dev
+    - name: Lint
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 . --config=build_blockers.flake8
+        pipenv run flake8 . --config=build_blockers.flake8
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --config=warn_only.flake8 --exit-zero
+        pipenv run flake8 . --config=warn_only.flake8 --exit-zero
     - name: Test with pytest
       run: |
-        pytest
+        pipenv run pytest
     - name: Upload pytest-cov coverage HTML
       uses: actions/upload-artifact@v1
       with:
