--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
       run: |
-        apt-get install python3 python3-pip
+        sudo apt-get install python3 python3-pip
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
