--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,6 +18,7 @@ jobs:
       run: |
         sudo apt-get install python3
         sudo ln -s /bin/python3 /bin/python
+        sudo ln -s /bin/pip3 /bin/pip
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
