--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,9 +14,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Update Apt
+      run: |
+        sudo apt-get update && sudo apt-get upgrade -y
     - name: Set up Python 3.8
       run: |
-        sudo apt-get install python3
+        sudo apt-get install python3 python3-pip -y
         sudo ln -s /bin/python3 /bin/python
         sudo ln -s /bin/pip3 /bin/pip
     - name: Install dependencies
